Aggregate Slopes function complete. Now you can take multiple contracts and produce the aggregate slope parity graph

--- a/options-learning-lab.ipynb
+++ b/options-learning-lab.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T18:51:16.071247Z",
-     "start_time": "2024-08-26T18:51:16.067546Z"
+     "end_time": "2024-08-27T13:16:52.420134Z",
+     "start_time": "2024-08-27T13:16:52.416485Z"
     }
    },
    "cell_type": "code",
@@ -29,8 +29,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-26T18:51:16.078700Z",
-     "start_time": "2024-08-26T18:51:16.072645Z"
+     "end_time": "2024-08-27T13:16:52.428986Z",
+     "start_time": "2024-08-27T13:16:52.421642Z"
     }
    },
    "source": [
@@ -166,14 +166,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# CHAPTER 3: Expiration Profit and Loss",
+   "source": "# CHAPTER 4: Expiration Profit and Loss",
    "id": "dcaa23a47eec36e6"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T18:51:18.872387Z",
-     "start_time": "2024-08-26T18:51:18.867558Z"
+     "end_time": "2024-08-27T13:17:06.688994Z",
+     "start_time": "2024-08-27T13:17:06.684842Z"
     }
    },
    "cell_type": "code",
@@ -239,7 +239,12 @@
    "id": "799039474fddf971"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:17:16.992443Z",
+     "start_time": "2024-08-27T13:17:16.987692Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def plot_long_call_option_parity(spot_prices, strike_price):\n",
@@ -285,7 +290,7 @@
    ],
    "id": "7d0042b95fe14d6",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -307,7 +312,12 @@
    "id": "f86482d68ce4864a"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:17:20.006089Z",
+     "start_time": "2024-08-27T13:17:20.001195Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def plot_short_call_option_parity(spot_prices, strike_price):\n",
@@ -353,7 +363,7 @@
    ],
    "id": "d4afa2e55ff8e7e7",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -375,7 +385,12 @@
    "id": "cfacdb159a1b658"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:17:21.788154Z",
+     "start_time": "2024-08-27T13:17:21.782887Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def plot_long_put_option_parity(spot_prices, strike_price):\n",
@@ -421,7 +436,7 @@
    ],
    "id": "323c09aad767c1d8",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -443,7 +458,12 @@
    "id": "c3634906051e4bcf"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:17:23.640557Z",
+     "start_time": "2024-08-27T13:17:23.636118Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def plot_short_put_option_parity(spot_prices, strike_price):\n",
@@ -489,7 +509,7 @@
    ],
    "id": "78de130aa81c55de",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -511,12 +531,7 @@
    "id": "5a1c2e015a801034"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:17:28.441724Z",
-     "start_time": "2024-08-26T19:17:28.437567Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "spot_prices = np.array([80, 85, 90, 95, 100, 105, 110, 115, 120, 125])\n",
@@ -524,103 +539,39 @@
    ],
    "id": "8ee9d30a14671cbd",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:17:29.065850Z",
-     "start_time": "2024-08-26T19:17:29.059307Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "intrinsic_values_call_options(spot_prices, strike_price)",
    "id": "33c61cfbb9f5d45b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  0,  0,  0,  0,  5, 10, 15, 20, 25])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:17:34.205271Z",
-     "start_time": "2024-08-26T19:17:34.199846Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "-intrinsic_values_call_options(spot_prices, strike_price)",
    "id": "3c1d9baf77d73407",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0,   0,   0,   0,   0,  -5, -10, -15, -20, -25])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:17:35.572835Z",
-     "start_time": "2024-08-26T19:17:35.569342Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "intrinsic_values_put_options(spot_prices, strike_price)",
    "id": "a1396a912d291dd2",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([20, 15, 10,  5,  0,  0,  0,  0,  0,  0])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 7
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:17:36.068347Z",
-     "start_time": "2024-08-26T19:17:36.064476Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "-intrinsic_values_put_options(spot_prices, strike_price)",
    "id": "ee8b4950aa4ddacd",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-20, -15, -10,  -5,   0,   0,   0,   0,   0,   0])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -631,8 +582,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T20:21:42.231335Z",
-     "start_time": "2024-08-26T20:21:42.227069Z"
+     "end_time": "2024-08-27T13:17:27.103788Z",
+     "start_time": "2024-08-27T13:17:27.100241Z"
     }
    },
    "cell_type": "code",
@@ -659,15 +610,10 @@
    ],
    "id": "a77056907f3603cf",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 8
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T20:21:42.999660Z",
-     "start_time": "2024-08-26T20:21:42.994838Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Example usage:\n",
@@ -676,19 +622,8 @@
     "long_call_slope(spot_prices, strike_price)"
    ],
    "id": "92c9c16a88e879ae",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 1., 1., 1.])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 30
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -699,8 +634,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T19:30:44.720027Z",
-     "start_time": "2024-08-26T19:30:44.715119Z"
+     "end_time": "2024-08-27T13:17:32.248280Z",
+     "start_time": "2024-08-27T13:17:32.244607Z"
     }
    },
    "cell_type": "code",
@@ -727,15 +662,10 @@
    ],
    "id": "6ebc5c4856200af3",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 9
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:30:45.187209Z",
-     "start_time": "2024-08-26T19:30:45.182202Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Example usage:\n",
@@ -744,19 +674,8 @@
     "short_call_slope(spot_prices, strike_price)"
    ],
    "id": "a86df79f309c8202",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.,  0.,  0.,  0.,  0.,  0., -1., -1., -1.])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 21
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -767,8 +686,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T19:32:49.395836Z",
-     "start_time": "2024-08-26T19:32:49.392603Z"
+     "end_time": "2024-08-27T13:17:37.841186Z",
+     "start_time": "2024-08-27T13:17:37.837176Z"
     }
    },
    "cell_type": "code",
@@ -795,15 +714,10 @@
    ],
    "id": "c2c834363585db03",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 10
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-26T19:32:50.489698Z",
-     "start_time": "2024-08-26T19:32:50.485318Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# Example usage:\n",
@@ -812,19 +726,8 @@
     "long_put_slope(spot_prices, strike_price)"
    ],
    "id": "1806d4944c78372b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1., -1., -1., -1., -1., -1.,  0.,  0.,  0.])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 23
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -835,8 +738,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T19:33:42.992624Z",
-     "start_time": "2024-08-26T19:33:42.989398Z"
+     "end_time": "2024-08-27T13:17:43.245296Z",
+     "start_time": "2024-08-27T13:17:43.241551Z"
     }
    },
    "cell_type": "code",
@@ -851,7 +754,6 @@
     "\n",
     "    Returns:\n",
     "    (np.array): The slope of the short put option.\n",
-    "    \n",
     "    \"\"\"\n",
     "    # Calculate the intrinsic values for the put option\n",
     "    intrinsic_values = -intrinsic_values_put_options(spot_prices, strike_price)\n",
@@ -864,49 +766,38 @@
    ],
    "id": "1177dd4399486be2",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 11
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 1., 1., 1., 1., 1., 0., 0., 0.])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 26,
    "source": [
     "# Example usage:\n",
     "spot_prices = np.array([80, 85, 90, 95, 100, 105, 110, 115, 120, 125])\n",
     "strike_price = 110\n",
     "short_put_slope(spot_prices, strike_price)"
    ],
-   "id": "8cbe035c063a9fa2"
+   "id": "8cbe035c063a9fa2",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Example Postion Figure 4-9",
+   "source": "## Example Position Figure 4-9",
    "id": "d87dc73df4418031"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T20:42:09.517258Z",
-     "start_time": "2024-08-26T20:42:09.512658Z"
+     "end_time": "2024-08-27T13:47:39.732857Z",
+     "start_time": "2024-08-27T13:47:39.727519Z"
     }
    },
    "cell_type": "code",
    "source": [
     "spot_prices = np.array([60, 65, 70, 75, 80, 85])\n",
-    "slopes = (3*long_call_slope(spot_prices, 65) \n",
+    "(3*long_call_slope(spot_prices, 65) \n",
     "+2*long_put_slope(spot_prices, 65)\n",
     "+2*long_call_slope(spot_prices, 70) \n",
     "+4*short_put_slope(spot_prices, 70)\n",
@@ -917,14 +808,137 @@
     "+np.array([-4., -4. , -4., -4., -4.]))"
    ],
    "id": "b7ed06ab2f28e807",
-   "outputs": [],
-   "execution_count": 49
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.,  2.,  0., -3., -1.])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 53
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Expiration Profit and Loss",
+   "id": "b6630e6d6d113500"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T20:43:08.300488Z",
-     "start_time": "2024-08-26T20:43:08.294471Z"
+     "end_time": "2024-08-27T13:50:14.135151Z",
+     "start_time": "2024-08-27T13:50:14.130074Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def aggregate_slopes(spot_prices, strike_prices, contract_type, contract_amounts, underlying_contracts):\n",
+    "    \"\"\"\n",
+    "    Calculate the aggregate slopes for a portfolio of options and underlying contracts.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - spot_prices (np.array): Array of current spot prices for the underlying asset.\n",
+    "    - strike_prices (np.array): Array of strike prices corresponding to each contract.\n",
+    "    - contract_type (np.array): Array of strings indicating the type of each contract.\n",
+    "                                Expected values are \"long-call\", \"long-put\", \"short-call\", \"short-put\".\n",
+    "    - contract_amounts (np.array): Array of integers indicating the number of contracts for each option.\n",
+    "    - underlying_contracts (int or float): The number of underlying contracts (positive for long, negative for short).\n",
+    "\n",
+    "    Returns:\n",
+    "    - total_slopes (np.array): The aggregated slopes for the portfolio, based on the given contracts and underlying positions.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Initialize an array for the aggregate slopes, excluding the last element of spot_prices\n",
+    "    # This assumes that we do not want to calculate the slope for the last spot price\n",
+    "    total_slopes = np.zeros_like(spot_prices[:-1], dtype=float)\n",
+    "\n",
+    "    # Create a dictionary to map contract types to their respective slope functions\n",
+    "    # This allows for dynamic selection of the correct function based on contract_type\n",
+    "    slope_functions = {\n",
+    "        \"long-call\": long_call_slope,\n",
+    "        \"long-put\": long_put_slope,\n",
+    "        \"short-call\": short_call_slope,\n",
+    "        \"short-put\": short_put_slope\n",
+    "    }\n",
+    "\n",
+    "    # Iterate over each contract in the portfolio\n",
+    "    # zip() is used to loop over strike_prices, contract_type, and contract_amounts in parallel\n",
+    "    for strike, ctype, amount in zip(strike_prices, contract_type, contract_amounts):\n",
+    "        # Retrieve the appropriate slope function based on the contract type\n",
+    "        slope_func = slope_functions[ctype]\n",
+    "\n",
+    "        # Calculate the slope for the current spot prices and strike price\n",
+    "        # This returns an array of slopes, one for each spot price\n",
+    "        slopes = slope_func(spot_prices, strike)\n",
+    "\n",
+    "        # Add the calculated slopes to the total slopes, scaled by the number of contracts\n",
+    "        total_slopes += amount * slopes\n",
+    "\n",
+    "    # Add the effect of the underlying contracts to the total slopes\n",
+    "    # The underlying contracts are considered to apply equally across all spot prices (except the last)\n",
+    "    total_slopes += underlying_contracts * np.ones_like(spot_prices[:-1])\n",
+    "\n",
+    "    return total_slopes"
+   ],
+   "id": "bc96870ce464bae",
+   "outputs": [],
+   "execution_count": 59
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:50:14.771596Z",
+     "start_time": "2024-08-27T13:50:14.768264Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Example usage\n",
+    "spot_prices = np.array([60, 65, 70, 75, 80, 85])\n",
+    "strike_prices = np.array([65, 65, 70, 70, 75, 75, 80, 80])\n",
+    "contract_type = np.array([\"long-call\", \"long-put\", \"long-call\", \"short-put\", \"short-call\", \"long-put\", \"long-call\", \"short-put\"])\n",
+    "contract_amounts = np.array([3, 2, 2, 4, 6, 3, 4, 2])\n",
+    "underlying_contracts = -4"
+   ],
+   "id": "c4d004d83aaf49d6",
+   "outputs": [],
+   "execution_count": 60
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:50:15.268523Z",
+     "start_time": "2024-08-27T13:50:15.263781Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Calculate the aggregate slopes\n",
+    "slopes = aggregate_slopes(spot_prices, strike_prices, contract_type, contract_amounts, underlying_contracts)\n",
+    "print(slopes)"
+   ],
+   "id": "bec5f128783c025a",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.  2.  0. -3. -1.]\n"
+     ]
+    }
+   ],
+   "execution_count": 61
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T13:50:16.348405Z",
+     "start_time": "2024-08-27T13:50:16.342658Z"
     }
    },
    "cell_type": "code",
@@ -977,20 +991,20 @@
     "    # Show the plot\n",
     "    plt.show()"
    ],
-   "id": "1ca89a6f4e3b99c3",
+   "id": "a049332fcf901b9b",
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 62
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-26T20:43:09.129938Z",
-     "start_time": "2024-08-26T20:43:09.007203Z"
+     "end_time": "2024-08-27T13:50:17.950149Z",
+     "start_time": "2024-08-27T13:50:17.828919Z"
     }
    },
    "cell_type": "code",
    "source": "plot_parity_graph_with_slopes(spot_prices, slopes)",
-   "id": "68811a4fa0e80639",
+   "id": "f1aabad310065cc3",
    "outputs": [
     {
      "data": {
@@ -1003,7 +1017,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 52
+   "execution_count": 63
   },
   {
    "metadata": {},
@@ -1011,7 +1025,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "e94f66394f822273"
+   "id": "42c0b49c4f47acf1"
   }
  ],
  "metadata": {
